src/objects/Question__c.object
<CustomObject>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <label>ProductGroup</label>
        <referenceTo>ProductGroup__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QuestionPicklist__c</fullName>
        <label>QuestionPicklist</label>
        <picklist>
            <picklistValues>
                <fullName>Violet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indigo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QuestionText__c</fullName>
        <label>QuestionText</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionType__c</fullName>
        <label>QuestionType</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <recordTypes>
        <fullName>TextRecordType</fullName>
        <active>true</active>
        <label>TextRecordType</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>